bk_ida/gobmkida/g1/routine_to_string
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/routine_to_string/src/engine/printutils.c:842:26: error: use of undeclared identifier 'unk_48E421'
result = ( const char *)&unk_48E421; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/routine_to_string/src/engine/printutils.c:854:26: error: use of undeclared identifier 'unk_48E409'
result = ( const char *)&unk_48E409; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/routine_to_string/src/obj/1/printutils.o] Error 1
